# SpaRED

./: .gitignore  Gemfile  LICENSE.txt  MANIFEST.in  README.md  index.html  metadata.html  pyproject.toml  requirements.txt  setup.py  token.txt
Datasets_Pages/10XGMBC/: dataset_10XGMBC.html
Datasets_Pages/10XGMBSA/: dataset_10XGMBSA.html
Datasets_Pages/10XGMBSP/: dataset_10XGMBSP.html
Datasets_Pages/AHSCC/: dataset_AHSCC.html
Datasets_Pages/FMBC/: dataset_FMBC.html
Datasets_Pages/MHPBTP2/: dataset_MHPBTP2.html
Datasets_Pages/MHPC/: dataset_MHPC.html
Datasets_Pages/MHSI/: dataset_MHSI.html
Datasets_Pages/MMBP1/: dataset_MMBP1.html
Datasets_Pages/MMBP2/: dataset_MMBP2.html
Datasets_Pages/MMBR/: dataset_MMBR.html
Datasets_Pages/PMI/: dataset_PMI.html
Datasets_Pages/VHS/: dataset_VHS.html
Datasets_Pages/VMB/: dataset_VMB.html
HTML Generator/: gen_dataset_pages.py
Human_Page/: human_data.html
Main_Plots/: Human_Mouse_database.csv
Mouse_Page/: mouse_data.html
People_Page/: people.html
Processing_details/: dataset_processing.html
_site/: bulma-clean-theme.gemspec  metadata.html
_site/HTML Generator/: Datasets_all_data.csv
_site/Main_Plots/: database_metadata.csv  general_visualization.py
_site/Mouse_Page/: mouse_data.html
_site/People_Page/: people.html
_site/Processing_details/: dataset_filtering.html
assets/css/: app.scss
docs/: requirements.in  requirements.txt
docs/source/: api.rst  conf.py
spared/: .gitignore  __init__.py
spared/PublicDatabase/: README_template.md
spared/datasets/: __init__.py  datasets.py
spared/denoising/: __init__.py  denoising.py
spared/filtering/: __init__.py
tutorials/: misc.ipynb  plotting.ipynb  processing.ipynb  quickstart.ipynb
(+153 files in other folders)
